Fix for bug 96514. Don't return bogus values from preferences when no default preference exists. patch=ccarlen, r=bnesse,sr=sfraser,a=dbaron.